{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 80,
  "lineage": "f796eda5-867a-5b38-9332-7f7e051b1959",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:internet-gateway/igw-00c7dc91efac56fbf",
            "id": "igw-00c7dc91efac56fbf",
            "owner_id": "013430008630",
            "tags": {
              "Name": "webapp-internet_gateway"
            },
            "tags_all": {
              "Name": "webapp-internet_gateway"
            },
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "webapp-load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:loadbalancer/app/webapp-load-balancer/107e1543296c57c6",
            "arn_suffix": "app/webapp-load-balancer/107e1543296c57c6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-load-balancer-1795323016.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:loadbalancer/app/webapp-load-balancer/107e1543296c57c6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a5b2156fa8374251"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05541a8de121b8674"
              },
              {
                "subnet_id": "subnet-0f57ad5c5bb53f611"
              }
            ],
            "subnets": [
              "subnet-05541a8de121b8674",
              "subnet-0f57ad5c5bb53f611"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.webapp-security_group-1",
            "aws_subnet.webapp-public_subnet-1",
            "aws_subnet.webapp-public_subnet-2",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "webapp-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:listener/app/webapp-load-balancer/107e1543296c57c6/bc7c4a071e298e69",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:targetgroup/webapp-target-group/e7a5136910e13dab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:listener/app/webapp-load-balancer/107e1543296c57c6/bc7c4a071e298e69",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:loadbalancer/app/webapp-load-balancer/107e1543296c57c6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.webapp-load_balancer",
            "aws_lb_target_group.webapp-target_group",
            "aws_security_group.webapp-security_group-1",
            "aws_subnet.webapp-public_subnet-1",
            "aws_subnet.webapp-public_subnet-2",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webapp-target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:targetgroup/webapp-target-group/e7a5136910e13dab",
            "arn_suffix": "targetgroup/webapp-target-group/e7a5136910e13dab",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:013430008630:targetgroup/webapp-target-group/e7a5136910e13dab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webapp-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "webapp-route_table-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:route-table/rtb-04c84aee800b5702e",
            "id": "rtb-04c84aee800b5702e",
            "owner_id": "013430008630",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c7dc91efac56fbf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-route_table-1"
            },
            "tags_all": {
              "Name": "webapp-route_table-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-internet_gateway",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-RT-ASS-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f471cd60c54d7a4f",
            "route_table_id": "rtb-04c84aee800b5702e",
            "subnet_id": "subnet-0f57ad5c5bb53f611"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-internet_gateway",
            "aws_route_table.webapp-route_table-1",
            "aws_subnet.webapp-public_subnet-1",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webapp-RT-ASS-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019a798969f40297e",
            "route_table_id": "rtb-04c84aee800b5702e",
            "subnet_id": "subnet-05541a8de121b8674"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-internet_gateway",
            "aws_route_table.webapp-route_table-1",
            "aws_subnet.webapp-public_subnet-2",
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webapp-security_group-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:security-group/sg-0a5b2156fa8374251",
            "description": "Allowing inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5b2156fa8374251",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webapp-security_group-1",
            "name_prefix": "",
            "owner_id": "013430008630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webapp-security_group-1"
            },
            "tags_all": {
              "Name": "webapp-security_group-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:subnet/subnet-072a42008ba671000",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072a42008ba671000",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013430008630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-private_subnet-1"
            },
            "tags_all": {
              "Name": "webapp-private_subnet-1"
            },
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-private_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:subnet/subnet-0ad54f8544781bfd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad54f8544781bfd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013430008630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-private_subnet-2"
            },
            "tags_all": {
              "Name": "webapp-private_subnet-2"
            },
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:subnet/subnet-0f57ad5c5bb53f611",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f57ad5c5bb53f611",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013430008630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-public_subnet-1"
            },
            "tags_all": {
              "Name": "webapp-public_subnet-1"
            },
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webapp-public_subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:subnet/subnet-05541a8de121b8674",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05541a8de121b8674",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "013430008630",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "webapp-public_subnet-2"
            },
            "tags_all": {
              "Name": "webapp-public_subnet-2"
            },
            "vpc_id": "vpc-0ebd13a5ed2d4cdc9"
          },
          "dependencies": [
            "aws_vpc.webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:013430008630:vpc/vpc-0ebd13a5ed2d4cdc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0151700468664fd45",
            "default_route_table_id": "rtb-04ae5c69d47f37462",
            "default_security_group_id": "sg-0ec15064d710a48a0",
            "dhcp_options_id": "dopt-0c1d1a9dd8a3f7a64",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebd13a5ed2d4cdc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ae5c69d47f37462",
            "owner_id": "013430008630",
            "tags": {
              "Name": "webapp-vpc"
            },
            "tags_all": {
              "Name": "webapp-vpc"
            }
          }
        }
      ]
    }
  ]
}